--- a/src/app/osoba/osoba.component.html
+++ b/src/app/osoba/osoba.component.html
@@ -157,7 +157,7 @@
           pButton
           pRipple
           type="button"
-          (click)="deletePerson(person)"
+          (click)="deletePerson(person.id)"
           icon="pi pi-times"
           class="p-button-rounded p-button-text p-button-danger p-button-sm"
         ></button>
