--- a/src/app/ksiazka/book-form/book-form.component.html
+++ b/src/app/ksiazka/book-form/book-form.component.html
@@ -149,4 +149,6 @@
       </tr>
     </ng-template>
   </p-table>
+  {{ "zaplacono za ksiazke : " + paidForBook }}
+  {{ "do zaplacenia za ksiazke : " + toPayForBook }}
 </ng-template>
