search changed/book-form table modified

--- a/src/app/ksiazka/ksiazka.component.html
+++ b/src/app/ksiazka/ksiazka.component.html
@@ -45,6 +45,7 @@
         [(ngModel)]="searchedValue"
         placeholder="Wyszukaj książkę"
         class="p-button-warning"
+        (ngModelChange)="booksSearch(searchedValue)"
       />
     </div>
   </div>
