--- a/src/app/osoba/osoba.component.html
+++ b/src/app/osoba/osoba.component.html
@@ -53,6 +53,7 @@
         [(ngModel)]="searchedValue"
         placeholder="Wyszukaj osobę"
         class="p-button-warning"
+        (ngModelChange)="personSearch(searchedValue)"
       />
     </div>
   </div>
