--- a/src/app/ksiazka/book-form/book-form.component.html
+++ b/src/app/ksiazka/book-form/book-form.component.html
@@ -54,6 +54,7 @@
           placeholder="Wyszukaj osobę"
           class="p-button-warning"
           [(ngModel)]="serach"
+          (ngModelChange)="searchPeople()"
         />
       </div>
     </div>
@@ -127,6 +128,8 @@
         <th class="dane">IMIE</th>
         <th class="dane">NAZWISKO</th>
         <th class="dane">DATA PRZYJĘCIA</th>
+        <th class="dane">DATA ODDANIA</th>
+        <th class="dane">KWOTA DO ZAPŁATY</th>
         <th class></th>
       </tr>
     </ng-template>
@@ -136,7 +139,11 @@
         <td class="dane">{{ loans.Person.imie }}</td>
         <td class="dane">{{ loans.Person.nazwisko }}</td>
         <td class="dane">{{ loans.Loan.dataPrzyjecia.toLocaleString() }}</td>
-        <td style="min-width: 55%"></td>
+        <td class="dane">
+          {{ loans.Loan.dataOddania?.toLocaleString() || "-" }}
+        </td>
+        <td class="dane">{{ loans.Payment.kwota }}zł</td>
+        <td></td>
         <td class="bttns">
           <button
             pButton
