--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- guziory -->
 <p-toolbar>
   <nav class="p-toolbar-group-left">
-    <h1 class="toolbar">
+    <h1 class="toolbar" routerLink="/">
       <i class="pi pi-book" pBadge style="font-size: 2rem" value="2"></i>
       Biblioteka
     </h1>
