--- a/src/app/oplaty/oplaty.component.html
+++ b/src/app/oplaty/oplaty.component.html
@@ -9,3 +9,7 @@
   id = {{ id }} = tutaj ma byc historia wypozyczen mozliwosc wypozyczenia oplaty
   itd
 </ng-template> -->
+<img
+  src="https://r67.cooltext.com/rendered/cooltext415363957547606.gif"
+  alt="Oplaty placeholder"
+/>
