--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- todo przestawić w vsc aby tak nie formatował i nie dodawal / do znacznikó np <hr> -->
 <!-- guziory -->
 <p-toolbar>
   <nav class="p-toolbar-group-left" routerLink="/">
