osoba-form returned loans data sort

--- a/src/app/osoba/person-form/person-form.component.html
+++ b/src/app/osoba/person-form/person-form.component.html
@@ -93,7 +93,9 @@
             <td class="bttns">
               <!-- ZAPLAC ZA KSIAZKE -->
               <!-- <div *ngIf="loans.Payment?.oplacone ?? false : content"> -->
-              <div *ngIf="loans.Payment?.oplacone !== true">
+              <div *ngIf="loans.Payment.oplacone !== true">
+                <!------------------------------------------------------------------------------------- KWOTA-->
+                {{ loans.Payment.kwota + "zł" }}
                 <p-button
                   styleClass="p-button-outlined p-button-success p-button-rounded"
                   icon="pi pi-dollar"
@@ -101,7 +103,7 @@
                 ></p-button>
               </div>
               <!-- CHECKED OPLACONE -->
-              <div *ngIf="loans.Payment?.oplacone !== false">
+              <div *ngIf="loans.Payment.oplacone !== false">
                 <p-button
                   styleClass="p-button-text p-button-success p-button-rounded"
                   icon="pi pi-check-circle"
