--- a/src/app/oplaty/oplaty.component.html
+++ b/src/app/oplaty/oplaty.component.html
@@ -7,3 +7,11 @@
   id = {{ id }} = tutaj ma byc historia wypozyczen mozliwosc wypozyczenia oplaty
   itd
 </ng-template> -->
+Oplaty
+<!-- <ng-template #content>
+  <nav class="name">
+    <b>{{ person?.id }}</b>
+    {{ person?.imie }}
+    <b>{{ person?.nazwisko }} </b>
+  </nav>
+</ng-template> -->
