--- a/src/app/osoba/osoba.component.html
+++ b/src/app/osoba/osoba.component.html
@@ -123,9 +123,9 @@
 >
   <ng-template pTemplate="header">
     <tr>
-      <th style="max-width: 5%">ID</th>
-      <th class="dane">IMIE</th>
-      <th class="dane">NAZWISKO</th>
+      <th style="max-width: 5%" class="upprText">id</th>
+      <th class="dane upprText">imie</th>
+      <th class="dane upprText">nazwisko</th>
       <th></th>
       <th class="editBttns"></th>
       <th class="editBttns"></th>
