--- a/src/app/osoba/person-form/person-form.component.html
+++ b/src/app/osoba/person-form/person-form.component.html
@@ -92,16 +92,17 @@
             <td class="dane2">{{ loans.Loan.dataOddania.toLocaleString() }}</td>
             <td class="bttns">
               <!-- ZAPLAC ZA KSIAZKE -->
-              <!-- <div *ngIf="loans.Payment?.oplacone ?? false : content"> -->
-              <div *ngIf="loans.Payment?.oplacone !== true">
+              <div *ngIf="loans.Payment.oplacone !== true">
+                <!------------------------------------------------------------------------------------- KWOTA-->
                 <p-button
                   styleClass="p-button-outlined p-button-success p-button-rounded"
                   icon="pi pi-dollar"
+                  label="{{ loans.Payment.kwota }}"
                   (click)="payForLoan(loans.Loan.id)"
                 ></p-button>
               </div>
               <!-- CHECKED OPLACONE -->
-              <div *ngIf="loans.Payment?.oplacone !== false">
+              <div *ngIf="loans.Payment.oplacone !== false">
                 <p-button
                   styleClass="p-button-text p-button-success p-button-rounded"
                   icon="pi pi-check-circle"
