--- a/src/app/wypozyczenia/wypozyczenia.component.html
+++ b/src/app/wypozyczenia/wypozyczenia.component.html
@@ -6,13 +6,13 @@
 >
   <ng-template pTemplate="header">
     <tr>
-      <th class="bttnsID">ID OSOBY</th>
-      <th class="dane">IMIĘ</th>
-      <th class="dane">NAZWISKO</th>
-      <th class="bttnsID"></th>
+      <th class="bttnsID upprText">id osoby</th>
+      <th class="dane upprText">imię</th>
+      <th class="dane upprText">nazwisko</th>
+      <th class="bttnsID upprText"></th>
 
-      <th class="dane2">NAZWA KSIĄŻKI</th>
-      <th class="dane2">AUTOR</th>
+      <th class="dane2 upprText">nazwa książki</th>
+      <th class="dane2 upprText">autor</th>
       <th></th>
       <th class="bttns"></th>
       <th class="bttns"></th>
@@ -58,8 +58,8 @@
           pRipple
           type="button"
           icon="pi pi-dollar"
-          (click)="returnBook(loan.Loan.id)"
           class="p-button-rounded p-button-text p-button-success p-button-sm"
+          (click)="returnBook(loan.Loan.id)"
         ></button>
       </td>
     </tr>
