--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
+h1 {
+  margin-left: auto;
+  margin-right: auto;
+  font-family: Segoe UI;
+  text-align: center;
+  font-size: 40px;
+}
+
+ul {
+  font-family: Segoe UI;
+  font-size: 40px;
+}
+div {
+  font-family: Segoe UI;
+}
+
+a {
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px;
+}
+nav {
+  text-align: center;
+  border-spacing: 10px;
+}
+
+.toolbar {
+  margin: 5px;
+  font-family: Segoe UI;
+}
+button {
+  text-transform: uppercase;
+}
+.upprText {
+  text-transform: uppercase;
+}
