--- a/src/app/osoba/person-form/person-form.component.html
+++ b/src/app/osoba/person-form/person-form.component.html
@@ -42,8 +42,8 @@
     onLabel="Zakończ"
     offLabel="Wypożycz "
     class="button-container"
+    Icon="pi pi-arrow-down"
     offIcon="pi pi-arrow-up"
-    onIcon="pi pi-arrow-down"
     [style]="{ width: '100%' }"
   >
     {{ showAddContent ? "Zakończ" : "Wypożycz" }}
